--- a/paginas/github.html
+++ b/paginas/github.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   
-  <img src="../imagens/tela-github.jpg" alt="GitHub">
+  <img src="../imagens/tela-github-ariel.jpg" alt="GitHub">
 
   <a href="https://github.com/arielrodriguess" target="_blank" rel="external">ACESSE</a>
 
