Instagram screen update.

--- a/paginas/instagram.html
+++ b/paginas/instagram.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   
-  <img src="../imagens/tela-instagram.jpg" alt="Instagram">
+  <img src="../imagens/tela-instagram-ariel.jpg" alt="Instagram">
 
   <a href="https://instagram.com/arielrodrigues460" target="_blank" rel="external">ACESSE</a>
 
