Facebook screen update.

--- a/paginas/facebook.html
+++ b/paginas/facebook.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   
-  <img src="../imagens/tela-facebook.jpg" alt="Facebook">
+  <img src="../imagens/tela-facebook-ariel.jpg" alt="Facebook">
 
   <a href="https://facebook.com/ariel.rodrigues.94009841" target="_blank" rel="external">ACESSE</a>
 
